--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+		<script src="./js/main.js" defer></script>
 	</head>
 	<body>
 		<nav>
@@ -24,18 +25,19 @@
 				</ul>
 			</div>
 		</nav>
-		<div class="overlay">
-			<div class="overlay_content">
-				<ul>
-					<li><a href="#home">Home</a></li>
-					<li><a href="#home">project</a></li>
-					<li><a href="#home">works</a></li>
-				</ul>
+		<div class="all">
+			<div class="overlay">
+				<div class="overlay_content">
+					<ul>
+						<li><a href="#home">Home</a></li>
+						<li><a href="#home">project</a></li>
+						<li><a href="#home">works</a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		<div class="open">
 			<img src="./images/icon-hamburger.svg" alt="icon-hamburger image" />
 		</div>
-		<script src="/js/main.js"></script>
 	</body>
 </html>
