--- a/index.html
+++ b/index.html
@@ -10,34 +10,63 @@
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 		<script src="./js/main.js" defer></script>
 	</head>
 	<body>
-		<nav>
-			<div class="topnav">
-				<div class="logo">
-					<img src="./images/logo.png" alt="" />
-				</div>
-				<ul>
-					<li><a href="#home">Home</a></li>
-					<li><a href="#home">project</a></li>
-					<li><a href="#home">works</a></li>
-				</ul>
-			</div>
-		</nav>
-		<div class="all">
-			<div class="overlay">
-				<div class="overlay_content">
+		<header>
+			<nav>
+				<div class="topnav">
+					<div class="logo">
+						<img src="./images/logo.png" alt="" />
+					</div>
 					<ul>
-						<li><a href="#home">Home</a></li>
-						<li><a href="#home">project</a></li>
-						<li><a href="#home">works</a></li>
+						<li><a href="#home">About</a></li>
+						<li><a href="#home">Technologies</a></li>
+						<li><a href="#home">Project</a></li>
 					</ul>
+					<div class="icon">
+						<ul>
+							<li>
+								<a
+									href="https://github.com/Maarcbaz?tab=repositories"
+									target="_blank">
+									<i class="fa fa-github"></i>
+								</a>
+							</li>
+							<li>
+								<a
+									href="https://www.linkedin.com/in/abass-muhammed-73739829b/"
+									target="_blank">
+									<i class="fa fa-linkedin-square"></i>
+								</a>
+							</li>
+							<li>
+								<a href="https://wa.me/message/ZZIQ6AVH74DBA1" target="_blank">
+									<i class="fa fa-whatsapp"></i>
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</nav>
+			<div class="all">
+				<div class="overlay">
+					<div class="overlay_content">
+						<ul>
+							<li><a href="#home">Home</a></li>
+							<li><a href="#home">project</a></li>
+							<li><a href="#home">works</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="open">
-			<img src="./images/icon-hamburger.svg" alt="icon-hamburger image" />
-		</div>
+			<div class="open">
+				<img src="./images/icon-hamburger.svg" alt="icon-hamburger image" />
+			</div>
+		</header>
+		<main></main>
 	</body>
 </html>
