--- a/index.html
+++ b/index.html
@@ -62,9 +62,34 @@
 						</ul>
 					</div>
 				</div>
+				<div class="iconSm">
+					<ul>
+						<li>
+							<a
+								href="https://github.com/Maarcbaz?tab=repositories"
+								target="_blank">
+								<i class="fa fa-github"></i>
+							</a>
+						</li>
+						<li>
+							<a
+								href="https://www.linkedin.com/in/abass-muhammed-73739829b/"
+								target="_blank">
+								<i class="fa fa-linkedin-square"></i>
+							</a>
+						</li>
+						<li>
+							<a href="https://wa.me/message/ZZIQ6AVH74DBA1" target="_blank">
+								<i class="fa fa-whatsapp"></i>
+							</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 			<div class="open">
-				<img src="./images/icon-hamburger.svg" alt="icon-hamburger image" />
+				<img
+					src="./images/icon-hamburger copy.svg"
+					alt="icon-hamburger image" />
 			</div>
 		</header>
 		<main></main>
