--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			</div>
 			<div class="open">
 				<img
-					src="./images/icon-hamburger copy.svg"
+					src="./images/icon-hambuger.svg"
 					alt="icon-hamburger image" />
 			</div>
 		</header>
