--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<img src="./images/logo.png" alt="" />
 					</div>
 					<ul>
-						<li><a href="#home">About</a></li>
+						<li><a href="#about">About</a></li>
 						<li><a href="#home">Technologies</a></li>
 						<li><a href="#home">Project</a></li>
 					</ul>
@@ -56,9 +56,9 @@
 				<div class="overlay">
 					<div class="overlay_content">
 						<ul>
-							<li><a href="#home">Home</a></li>
-							<li><a href="#home">project</a></li>
-							<li><a href="#home">works</a></li>
+							<li><a href="#about">About</a></li>
+							<li><a href="#home">Technologies</a></li>
+							<li><a href="#home">Project</a></li>
 						</ul>
 					</div>
 				</div>
@@ -87,11 +87,25 @@
 				</div>
 			</div>
 			<div class="open">
-				<img
-					src="./images/icon-hambuger.svg"
-					alt="icon-hamburger image" />
+				<img src="./images/icon-hambuger.svg" alt="icon-hamburger image" />
 			</div>
 		</header>
-		<main></main>
+		<main>
+			<article class="about" id="about">
+				<div class="section_about_text">
+					<h1>hello there 👋</h1>
+					<h3>I'm <span class="name">Abass Muhammed</span></h3>
+					<p>
+						a front-end developer with a strong enthusiasm for creating flawless
+						user interfaces. My creative touch combined with a passion for clean
+						code allows me to turn concepts into visually attractive web
+						applications.
+					</p>
+				</div>
+				<div>
+					<img src="./images/abass.jpg" alt="Abass image" />
+				</div>
+			</article>
+		</main>
 	</body>
 </html>
