about section added

--- a/index.html
+++ b/index.html
@@ -93,17 +93,26 @@
 		<main>
 			<article class="about" id="about">
 				<div class="section_about_text">
-					<h1>hello there 👋</h1>
+					<h1>hello there!</h1>
 					<h3>I'm <span class="name">Abass Muhammed</span></h3>
 					<p>
-						a front-end developer with a strong enthusiasm for creating flawless
-						user interfaces. My creative touch combined with a passion for clean
-						code allows me to turn concepts into visually attractive web
-						applications.
+						A <span class="empahSize"> front-end developer </span> with a strong
+						enthusiasm for creating flawless
+						<span class="empahSize"> user interfaces. </span> My creative touch
+						combined with a passion for
+						<span class="empahSize"> clean code</span>
+						allows me to turn concepts into
+						<span class="empahSize">
+							visually attractive web applications.</span
+						>
 					</p>
+					<div class="btns">
+						<button class="hire_btn">Hire me</button>
+						<button class="talk_btn">Let's talk</button>
+					</div>
 				</div>
 				<div>
-					<img src="./images/abass.jpg" alt="Abass image" />
+					<img src="./images/staff2.jpg" alt="Abass image" />
 				</div>
 			</article>
 		</main>
