--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					</div>
 				</div>
 				<div>
-					<img src="./images/staff2.jpg" alt="Abass image" />
+					<img src="./images/abass.jpg" title="Abass" alt="Abass image" />
 				</div>
 			</article>
 			<section class="section_technologies" id="Technologies">
@@ -155,7 +155,7 @@
 					</div>
 					<div class="technology">
 						<div class="course">
-							<p>Javascript</p>
+							<p>Javascript [ES6]</p>
 							<p>Intermediate</p>
 						</div>
 						<div class="th_c">
@@ -199,6 +199,18 @@
 						</div>
 					</div>
 				</div>
+			</section>
+			<section class="add_tech">
+				<h2>Additional technologies and skills</h2>
+				<ul>
+					<li>Version Control (Git)</li>
+					<li>Word press</li>
+					<li>English</li>
+					<li>Quick Learning</li>
+					<li><abbr title="Responsive Web Design">RWD</abbr></li>
+					<li>Teamwork</li>
+					<li>Debugging</li>
+				</ul>
 			</section>
 		</main>
 	</body>
