--- a/index.html
+++ b/index.html
@@ -212,6 +212,78 @@
 					<li>Debugging</li>
 				</ul>
 			</section>
+			<section class="section_Project" id="project">
+				<h1>projects</h1>
+				<div class="projects">
+					<div class="projects_id">
+						<div class="project">
+							<img src="./images/netflix_page.png" alt="netflix_image page" />
+							<div class="overlap">
+								<div class="overlap_content">
+									<a href="#">
+										<i class="fa fa-browse">Live</i>
+									</a>
+									<a href="#">
+										<i class="fa fa-github"> Code </i>
+									</a>
+								</div>
+							</div>
+						</div>
+						<p class="description">netflix webpage</p>
+					</div>
+				</div>
+					<div class="projects_id">
+						<div class="project">
+							<img src="./images/netflix_page.png" alt="netflix_image page" />
+							<div class="overlap">
+								<div class="overlap_content">
+									<a href="#">
+										<i class="fa fa-browse">Live</i>
+									</a>
+									<a href="#">
+										<i class="fa fa-github"> Code </i>
+									</a>
+								</div>
+							</div>
+						</div>
+						<p class="description">netflix webpage</p>
+					</div>
+				</div>
+					<div class="projects_id">
+						<div class="project">
+							<img src="./images/netflix_page.png" alt="netflix_image page" />
+							<div class="overlap">
+								<div class="overlap_content">
+									<a href="#">
+										<i class="fa fa-browse">Live</i>
+									</a>
+									<a href="#">
+										<i class="fa fa-github"> Code </i>
+									</a>
+								</div>
+							</div>
+						</div>
+						<p class="description">netflix webpage</p>
+					</div>
+				</div>
+					<div class="projects_id">
+						<div class="project">
+							<img src="./images/netflix_page.png" alt="netflix_image page" />
+							<div class="overlap">
+								<div class="overlap_content">
+									<a href="#">
+										<i class="fa fa-browse">Live</i>
+									</a>
+									<a href="#">
+										<i class="fa fa-github"> Code </i>
+									</a>
+								</div>
+							</div>
+						</div>
+						<p class="description">netflix webpage</p>
+					</div>
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
