--- a/index.html
+++ b/index.html
@@ -214,73 +214,150 @@
 			</section>
 			<section class="section_Project" id="project">
 				<h1>projects</h1>
-				<div class="projects">
-					<div class="projects_id">
-						<div class="project">
-							<img src="./images/netflix_page.png" alt="netflix_image page" />
-							<div class="overlap">
-								<div class="overlap_content">
-									<a href="#">
-										<i class="fa fa-browse">Live</i>
-									</a>
-									<a href="#">
-										<i class="fa fa-github"> Code </i>
-									</a>
+				<div class="project_section">
+					<div class="projects">
+						<div class="projects_id">
+							<div class="project">
+								<img src="./images/netflix_page.png" alt="netflix_image page" />
+								<div class="overlap">
+									<div class="overlap_content">
+										<a href="#">
+											<i class="fa fa-browse">Live</i>
+										</a>
+										<a href="#">
+											<i class="fa fa-github"> Code </i>
+										</a>
+									</div>
 								</div>
 							</div>
+							<p class="description">netflix webpage</p>
 						</div>
-						<p class="description">netflix webpage</p>
 					</div>
-				</div>
-					<div class="projects_id">
-						<div class="project">
-							<img src="./images/netflix_page.png" alt="netflix_image page" />
-							<div class="overlap">
-								<div class="overlap_content">
-									<a href="#">
-										<i class="fa fa-browse">Live</i>
-									</a>
-									<a href="#">
-										<i class="fa fa-github"> Code </i>
-									</a>
+					<div class="projects">
+						<div class="projects_id">
+							<div class="project">
+								<img src="./images/netflix_page.png" alt="netflix_image page" />
+								<div class="overlap">
+									<div class="overlap_content">
+										<a href="#">
+											<i class="fa fa-browse">Live</i>
+										</a>
+										<a href="#">
+											<i class="fa fa-github"> Code </i>
+										</a>
+									</div>
 								</div>
 							</div>
+							<p class="description">netflix webpage</p>
 						</div>
-						<p class="description">netflix webpage</p>
 					</div>
-				</div>
-					<div class="projects_id">
-						<div class="project">
-							<img src="./images/netflix_page.png" alt="netflix_image page" />
-							<div class="overlap">
-								<div class="overlap_content">
-									<a href="#">
-										<i class="fa fa-browse">Live</i>
-									</a>
-									<a href="#">
-										<i class="fa fa-github"> Code </i>
-									</a>
+					<div class="projects">
+						<div class="projects_id">
+							<div class="project">
+								<img src="./images/netflix_page.png" alt="netflix_image page" />
+								<div class="overlap">
+									<div class="overlap_content">
+										<a href="#">
+											<i class="fa fa-browse">Live</i>
+										</a>
+										<a href="#">
+											<i class="fa fa-github"> Code </i>
+										</a>
+									</div>
 								</div>
 							</div>
+							<p class="description">netflix webpage</p>
 						</div>
-						<p class="description">netflix webpage</p>
 					</div>
-				</div>
-					<div class="projects_id">
-						<div class="project">
-							<img src="./images/netflix_page.png" alt="netflix_image page" />
-							<div class="overlap">
-								<div class="overlap_content">
-									<a href="#">
-										<i class="fa fa-browse">Live</i>
-									</a>
-									<a href="#">
-										<i class="fa fa-github"> Code </i>
-									</a>
+					<div class="projects">
+						<div class="projects_id">
+							<div class="project">
+								<img src="./images/netflix_page.png" alt="netflix_image page" />
+								<div class="overlap">
+									<div class="overlap_content">
+										<a href="#">
+											<i class="fa fa-browse">Live</i>
+										</a>
+										<a href="#">
+											<i class="fa fa-github"> Code </i>
+										</a>
+									</div>
 								</div>
 							</div>
+							<p class="description">netflix webpage</p>
 						</div>
-						<p class="description">netflix webpage</p>
+					</div>
+					<div class="projects">
+						<div class="projects_id">
+							<div class="project">
+								<img src="./images/netflix_page.png" alt="netflix_image page" />
+								<div class="overlap">
+									<div class="overlap_content">
+										<a href="#">
+											<i class="fa fa-browse">Live</i>
+										</a>
+										<a href="#">
+											<i class="fa fa-github"> Code </i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<p class="description">netflix webpage</p>
+						</div>
+					</div>
+					<div class="projects">
+						<div class="projects_id">
+							<div class="project">
+								<img src="./images/netflix_page.png" alt="netflix_image page" />
+								<div class="overlap">
+									<div class="overlap_content">
+										<a href="#">
+											<i class="fa fa-browse">Live</i>
+										</a>
+										<a href="#">
+											<i class="fa fa-github"> Code </i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<p class="description">netflix webpage</p>
+						</div>
+					</div>
+					<div class="projects">
+						<div class="projects_id">
+							<div class="project">
+								<img src="./images/netflix_page.png" alt="netflix_image page" />
+								<div class="overlap">
+									<div class="overlap_content">
+										<a href="#">
+											<i class="fa fa-browse">Live</i>
+										</a>
+										<a href="#">
+											<i class="fa fa-github"> Code </i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<p class="description">netflix webpage</p>
+						</div>
+					</div>
+					<div class="projects">
+						<div class="projects_id">
+							<div class="project">
+								<img src="./images/netflix_page.png" alt="netflix_image page" />
+								<div class="overlap">
+									<div class="overlap_content">
+										<a href="#">
+											<i class="fa fa-browse">Live</i>
+										</a>
+										<a href="#">
+											<i class="fa fa-github"> Code </i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<p class="description">netflix webpage</p>
+						</div>
 					</div>
 				</div>
 			</section>
