--- a/index.html
+++ b/index.html
@@ -236,7 +236,25 @@
 					<div class="projects">
 						<div class="projects_id">
 							<div class="project">
-								<img src="./images/netflix_page.png" alt="netflix_image page" />
+								<img src="./images/br-architect.png" alt="netflix_image page" />
+								<div class="overlap">
+									<div class="overlap_content black">
+										<a href="#">
+											<i class="fa fa-browse">Live</i>
+										</a>
+										<a href="#">
+											<i class="fa fa-github"> Code </i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<p class="description">netflix webpage</p>
+						</div>
+					</div>
+					<div class="projects">
+						<div class="projects_id">
+							<div class="project">
+								<img src="./images/flyo.png" alt="netflix_image page" />
 								<div class="overlap">
 									<div class="overlap_content">
 										<a href="#">
@@ -254,7 +272,7 @@
 					<div class="projects">
 						<div class="projects_id">
 							<div class="project">
-								<img src="./images/netflix_page.png" alt="netflix_image page" />
+								<img src="./images/loopstudios.png" alt="netflix_image page" />
 								<div class="overlap">
 									<div class="overlap_content">
 										<a href="#">
@@ -272,7 +290,29 @@
 					<div class="projects">
 						<div class="projects_id">
 							<div class="project">
-								<img src="./images/netflix_page.png" alt="netflix_image page" />
+								<img
+									src="./images/easy-bank-landing_page.png"
+									alt="netflix_image page" />
+								<div class="overlap">
+									<div class="overlap_content black">
+										<a href="#">
+											<i class="fa fa-browse">Live</i>
+										</a>
+										<a href="#">
+											<i class="fa fa-github"> Code </i>
+										</a>
+									</div>
+								</div>
+							</div>
+							<p class="description">netflix webpage</p>
+						</div>
+					</div>
+					<div class="projects">
+						<div class="projects_id">
+							<div class="project">
+								<img
+									src="./images/iphone_webapp.png"
+									alt="netflix_image page" />
 								<div class="overlap">
 									<div class="overlap_content">
 										<a href="#">
@@ -290,7 +330,9 @@
 					<div class="projects">
 						<div class="projects_id">
 							<div class="project">
-								<img src="./images/netflix_page.png" alt="netflix_image page" />
+								<img
+									src="./images/interior_desing.png"
+									alt="netflix_image page" />
 								<div class="overlap">
 									<div class="overlap_content">
 										<a href="#">
@@ -308,43 +350,7 @@
 					<div class="projects">
 						<div class="projects_id">
 							<div class="project">
-								<img src="./images/netflix_page.png" alt="netflix_image page" />
-								<div class="overlap">
-									<div class="overlap_content">
-										<a href="#">
-											<i class="fa fa-browse">Live</i>
-										</a>
-										<a href="#">
-											<i class="fa fa-github"> Code </i>
-										</a>
-									</div>
-								</div>
-							</div>
-							<p class="description">netflix webpage</p>
-						</div>
-					</div>
-					<div class="projects">
-						<div class="projects_id">
-							<div class="project">
-								<img src="./images/netflix_page.png" alt="netflix_image page" />
-								<div class="overlap">
-									<div class="overlap_content">
-										<a href="#">
-											<i class="fa fa-browse">Live</i>
-										</a>
-										<a href="#">
-											<i class="fa fa-github"> Code </i>
-										</a>
-									</div>
-								</div>
-							</div>
-							<p class="description">netflix webpage</p>
-						</div>
-					</div>
-					<div class="projects">
-						<div class="projects_id">
-							<div class="project">
-								<img src="./images/netflix_page.png" alt="netflix_image page" />
+								<img src="./images/catering.png" alt="netflix_image page" />
 								<div class="overlap">
 									<div class="overlap_content">
 										<a href="#">
