--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@
 							Download Resume
 							<span class="download"><i class="fa fa-download"></i></span>
 						</button>
-						<button class="hire_btn">Hire me</button>
+							<a
+								class="hire_btn"
+								href="mailto:Olayemiabaz@gmail.com"
+								target="_blank"
+								>Hire me!</a
+							>
 					</div>
 				</div>
 				<div>
