--- a/index.html
+++ b/index.html
@@ -125,12 +125,18 @@
 							Download Resume
 							<span class="download"><i class="fa fa-download"></i></span>
 						</button>
-							<a
-								class="hire_btn"
-								href="mailto:Olayemiabaz@gmail.com"
-								target="_blank"
-								>Hire me!</a
-							>
+						<a
+							class="hire_btn desktop"
+							href="mailto:Olayemiabaz@gmail.com"
+							target="_blank"
+							>Hire me!</a
+						>
+						<a
+							class="hire_btn phone"
+							href="https://wa.me/message/ZZIQ6AVH74DBA1"
+							target="_blank"
+							>Hire me!</a
+						>
 					</div>
 				</div>
 				<div>
@@ -227,7 +233,7 @@
 								<div class="overlap">
 									<div class="overlap_content">
 										<a href="#">
-											<i class="fa fa-browse">Live</i>
+											<i class="fa fa-live">Live</i>
 										</a>
 										<a href="#">
 											<i class="fa fa-github"> Code </i>
