--- a/index.html
+++ b/index.html
@@ -104,280 +104,282 @@
 				<img src="./images/icon-hambuger.svg" alt="icon-hamburger image" />
 			</div>
 		</header>
-		<main>
-			<article class="about" id="about">
-				<div class="section_about_text">
-					<h1>hello there!</h1>
-					<h3>I'm <span class="name">Abass Muhammed</span></h3>
-					<p>
-						A <span class="empahSize"> front-end developer </span> with a strong
-						enthusiasm for creating flawless
-						<span class="empahSize"> user interfaces. </span> My creative touch
-						combined with a passion for
-						<span class="empahSize"> clean code</span>
-						allows me to turn concepts into
-						<span class="empahSize">
-							visually attractive web applications.</span
-						>
-					</p>
-					<div class="btns">
-						<button class="talk_btn">
-							Download Resume
-							<span class="download"><i class="fa fa-download"></i></span>
-						</button>
-						<a
-							class="hire_btn desktop"
-							href="mailto:Olayemiabaz@gmail.com"
-							target="_blank"
-							>Hire me!</a
-						>
-						<a
-							class="hire_btn phone"
-							href="https://wa.me/message/ZZIQ6AVH74DBA1"
-							target="_blank"
-							>Hire me!</a
-						>
-					</div>
-				</div>
-				<div>
-					<img src="./images/abass.jpg" title="Abass" alt="Abass image" />
-				</div>
-			</article>
-			<section class="section_technologies" id="Technologies">
-				<h1>technologies</h1>
-				<div class="technologies">
-					<div class="technology">
-						<div class="course">
-							<p>HTML</p>
-							<p>Advanced</p>
-						</div>
-						<div class="th_c">
-							<div class="th_layer_high"></div>
+		<div class="container">
+			<main>
+				<article class="about" id="about">
+					<div class="section_about_text">
+						<h1>hello there!</h1>
+						<h3>I'm <span class="name">Abass Muhammed</span></h3>
+						<p>
+							A <span class="empahSize"> front-end developer </span> with a
+							strong enthusiasm for creating flawless
+							<span class="empahSize"> user interfaces. </span> My creative
+							touch combined with a passion for
+							<span class="empahSize"> clean code</span>
+							allows me to turn concepts into
+							<span class="empahSize">
+								visually attractive web applications.</span
+							>
+						</p>
+						<div class="btns">
+							<button class="talk_btn">
+								Download Resume
+								<span class="download"><i class="fa fa-download"></i></span>
+							</button>
+							<a
+								class="hire_btn desktop"
+								href="mailto:Olayemiabaz@gmail.com"
+								target="_blank"
+								>Hire me!</a
+							>
 						</div>
 					</div>
-					<div class="technology">
-						<div class="course">
-							<p>CSS</p>
-							<p>Advanced</p>
+					<div>
+						<img src="./images/abass.jpg" title="Abass" alt="Abass image" />
+					</div>
+				</article>
+				<section class="section_technologies" id="Technologies">
+					<h1>technologies</h1>
+					<div class="technologies">
+						<div class="technology">
+							<div class="course">
+								<p>HTML</p>
+								<p>Advanced</p>
+							</div>
+							<div class="th_c">
+								<div class="th_layer_high"></div>
+							</div>
 						</div>
-						<div class="th_c">
-							<div class="th_layer_high"></div>
+						<div class="technology">
+							<div class="course">
+								<p>CSS</p>
+								<p>Advanced</p>
+							</div>
+							<div class="th_c">
+								<div class="th_layer_high"></div>
+							</div>
+						</div>
+						<div class="technology">
+							<div class="course">
+								<p>Javascript [ES6]</p>
+								<p>Intermediate</p>
+							</div>
+							<div class="th_c">
+								<div class="th_layer_inter"></div>
+							</div>
+						</div>
+						<div class="technology">
+							<div class="course">
+								<p>Sass, Tailwind, Bootstrap</p>
+								<p>Intermediate</p>
+							</div>
+							<div class="th_c">
+								<div class="th_layer_inter"></div>
+							</div>
+						</div>
+						<div class="technology">
+							<div class="course">
+								<p>React</p>
+								<p>Beginner</p>
+							</div>
+							<div class="th_c">
+								<div class="th_layer_beginner"></div>
+							</div>
+						</div>
+						<div class="technology">
+							<div class="course">
+								<p>TypeScript, JQuery</p>
+								<p>Beginner</p>
+							</div>
+							<div class="th_c">
+								<div class="th_layer_beginner"></div>
+							</div>
+						</div>
+						<div class="technology">
+							<div class="course">
+								<p>Python</p>
+								<p>Beginner</p>
+							</div>
+							<div class="th_c">
+								<div class="th_layer_beginner"></div>
+							</div>
 						</div>
 					</div>
-					<div class="technology">
-						<div class="course">
-							<p>Javascript [ES6]</p>
-							<p>Intermediate</p>
-						</div>
-						<div class="th_c">
-							<div class="th_layer_inter"></div>
-						</div>
-					</div>
-					<div class="technology">
-						<div class="course">
-							<p>Sass, Tailwind, Bootstrap</p>
-							<p>Intermediate</p>
-						</div>
-						<div class="th_c">
-							<div class="th_layer_inter"></div>
-						</div>
-					</div>
-					<div class="technology">
-						<div class="course">
-							<p>React</p>
-							<p>Beginner</p>
-						</div>
-						<div class="th_c">
-							<div class="th_layer_beginner"></div>
-						</div>
-					</div>
-					<div class="technology">
-						<div class="course">
-							<p>TypeScript, JQuery</p>
-							<p>Beginner</p>
-						</div>
-						<div class="th_c">
-							<div class="th_layer_beginner"></div>
-						</div>
-					</div>
-					<div class="technology">
-						<div class="course">
-							<p>Python</p>
-							<p>Beginner</p>
-						</div>
-						<div class="th_c">
-							<div class="th_layer_beginner"></div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<section class="add_tech">
-				<h2>Additional technologies and skills</h2>
-				<ul>
-					<li>Version Control (Git)</li>
-					<li>Word press</li>
-					<li>English</li>
-					<li>Quick Learning</li>
-					<li><abbr title="Responsive Web Design">RWD</abbr></li>
-					<li>Teamwork</li>
-					<li>Debugging</li>
-				</ul>
-			</section>
-			<section class="section_Project" id="project">
-				<h1>projects</h1>
-				<div class="project_section">
-					<div class="projects">
-						<div class="projects_id">
-							<div class="project">
-								<img src="./images/netflix_page.png" alt="netflix_image page" />
-								<div class="overlap">
-									<div class="overlap_content">
-										<a href="#">
-											<i class="fa fa-live">Live</i>
-										</a>
-										<a href="#">
-											<i class="fa fa-github"> Code </i>
-										</a>
+				</section>
+				<section class="add_tech">
+					<h2>Additional technologies and skills</h2>
+					<ul>
+						<li>Version Control (Git)</li>
+						<li>Word press</li>
+						<li>English</li>
+						<li>Quick Learning</li>
+						<li><abbr title="Responsive Web Design">RWD</abbr></li>
+						<li>Teamwork</li>
+						<li>Debugging</li>
+					</ul>
+				</section>
+				<section class="section_Project" id="project">
+					<h1>projects</h1>
+					<div class="project_section">
+						<div class="projects">
+							<div class="projects_id">
+								<div class="project">
+									<img
+										src="./images/netflix_page.png"
+										alt="netflix_image page" />
+									<div class="overlap">
+										<div class="overlap_content">
+											<a href="#" target="_blank">
+												<i class="fa fa-live">Live</i>
+											</a>
+											<a href="#" target="_blank">
+												<i class="fa fa-github"> Code </i>
+											</a>
+										</div>
 									</div>
 								</div>
+								<p class="description">netflix webpage</p>
 							</div>
-							<p class="description">netflix webpage</p>
 						</div>
-					</div>
-					<div class="projects">
-						<div class="projects_id">
-							<div class="project">
-								<img src="./images/br-architect.png" alt="netflix_image page" />
-								<div class="overlap">
-									<div class="overlap_content black">
-										<a href="#">
-											<i class="fa fa-browse">Live</i>
-										</a>
-										<a href="#">
-											<i class="fa fa-github"> Code </i>
-										</a>
+						<div class="projects">
+							<div class="projects_id">
+								<div class="project">
+									<img
+										src="./images/br-architect.png"
+										alt="netflix_image page" />
+									<div class="overlap">
+										<div class="overlap_content black">
+											<a href="#" target="_blank">
+												<i class="fa fa-browse">Live</i>
+											</a>
+											<a href="#" target="_blank">
+												<i class="fa fa-github"> Code </i>
+											</a>
+										</div>
 									</div>
 								</div>
+								<p class="description">netflix webpage</p>
 							</div>
-							<p class="description">netflix webpage</p>
 						</div>
-					</div>
-					<div class="projects">
-						<div class="projects_id">
-							<div class="project">
-								<img src="./images/flyo.png" alt="netflix_image page" />
-								<div class="overlap">
-									<div class="overlap_content">
-										<a href="#">
-											<i class="fa fa-browse">Live</i>
-										</a>
-										<a href="#">
-											<i class="fa fa-github"> Code </i>
-										</a>
+						<div class="projects">
+							<div class="projects_id">
+								<div class="project">
+									<img src="./images/flyo.png" alt="netflix_image page" />
+									<div class="overlap">
+										<div class="overlap_content">
+											<a href="#" target="_blank">
+												<i class="fa fa-browse">Live</i>
+											</a>
+											<a href="#" target="_blank">
+												<i class="fa fa-github"> Code </i>
+											</a>
+										</div>
 									</div>
 								</div>
+								<p class="description">netflix webpage</p>
 							</div>
-							<p class="description">netflix webpage</p>
 						</div>
-					</div>
-					<div class="projects">
-						<div class="projects_id">
-							<div class="project">
-								<img src="./images/loopstudios.png" alt="netflix_image page" />
-								<div class="overlap">
-									<div class="overlap_content">
-										<a href="#">
-											<i class="fa fa-browse">Live</i>
-										</a>
-										<a href="#">
-											<i class="fa fa-github"> Code </i>
-										</a>
+						<div class="projects">
+							<div class="projects_id">
+								<div class="project">
+									<img
+										src="./images/loopstudios.png"
+										alt="netflix_image page" />
+									<div class="overlap">
+										<div class="overlap_content">
+											<a href="#" target="_blank">
+												<i class="fa fa-browse">Live</i>
+											</a>
+											<a href="#" target="_blank">
+												<i class="fa fa-github"> Code </i>
+											</a>
+										</div>
 									</div>
 								</div>
+								<p class="description">netflix webpage</p>
 							</div>
-							<p class="description">netflix webpage</p>
 						</div>
-					</div>
-					<div class="projects">
-						<div class="projects_id">
-							<div class="project">
-								<img
-									src="./images/easy-bank-landing_page.png"
-									alt="netflix_image page" />
-								<div class="overlap">
-									<div class="overlap_content black">
-										<a href="#">
-											<i class="fa fa-browse">Live</i>
-										</a>
-										<a href="#">
-											<i class="fa fa-github"> Code </i>
-										</a>
+						<div class="projects">
+							<div class="projects_id">
+								<div class="project">
+									<img
+										src="./images/easy-bank-landing_page.png"
+										alt="netflix_image page" />
+									<div class="overlap">
+										<div class="overlap_content black">
+											<a href="#" target="_blank">
+												<i class="fa fa-browse">Live</i>
+											</a>
+											<a href="#" target="_blank">
+												<i class="fa fa-github"> Code </i>
+											</a>
+										</div>
 									</div>
 								</div>
+								<p class="description">netflix webpage</p>
 							</div>
-							<p class="description">netflix webpage</p>
 						</div>
-					</div>
-					<div class="projects">
-						<div class="projects_id">
-							<div class="project">
-								<img
-									src="./images/iphone_webapp.png"
-									alt="netflix_image page" />
-								<div class="overlap">
-									<div class="overlap_content">
-										<a href="#">
-											<i class="fa fa-browse">Live</i>
-										</a>
-										<a href="#">
-											<i class="fa fa-github"> Code </i>
-										</a>
+						<div class="projects">
+							<div class="projects_id">
+								<div class="project">
+									<img
+										src="./images/iphone_webapp.png"
+										alt="netflix_image page" />
+									<div class="overlap">
+										<div class="overlap_content">
+											<a href="#" target="_blank">
+												<i class="fa fa-browse">Live</i>
+											</a>
+											<a href="#" target="_blank">
+												<i class="fa fa-github"> Code </i>
+											</a>
+										</div>
 									</div>
 								</div>
+								<p class="description">netflix webpage</p>
 							</div>
-							<p class="description">netflix webpage</p>
 						</div>
-					</div>
-					<div class="projects">
-						<div class="projects_id">
-							<div class="project">
-								<img
-									src="./images/interior_desing.png"
-									alt="netflix_image page" />
-								<div class="overlap">
-									<div class="overlap_content">
-										<a href="#">
-											<i class="fa fa-browse">Live</i>
-										</a>
-										<a href="#">
-											<i class="fa fa-github"> Code </i>
-										</a>
+						<div class="projects">
+							<div class="projects_id">
+								<div class="project">
+									<img
+										src="./images/interior_desing.png"
+										alt="netflix_image page" />
+									<div class="overlap">
+										<div class="overlap_content">
+											<a href="#" target="_blank">
+												<i class="fa fa-browse">Live</i>
+											</a>
+											<a href="#" target="_blank">
+												<i class="fa fa-github"> Code </i>
+											</a>
+										</div>
 									</div>
 								</div>
+								<p class="description">netflix webpage</p>
 							</div>
-							<p class="description">netflix webpage</p>
 						</div>
-					</div>
-					<div class="projects">
-						<div class="projects_id">
-							<div class="project">
-								<img src="./images/catering.png" alt="netflix_image page" />
-								<div class="overlap">
-									<div class="overlap_content">
-										<a href="#">
-											<i class="fa fa-browse">Live</i>
-										</a>
-										<a href="#">
-											<i class="fa fa-github"> Code </i>
-										</a>
+						<div class="projects">
+							<div class="projects_id">
+								<div class="project">
+									<img src="./images/catering.png" alt="netflix_image page" />
+									<div class="overlap">
+										<div class="overlap_content">
+											<a href="#" target="_blank">
+												<i class="fa fa-browse">Live</i>
+											</a>
+											<a href="#" target="_blank">
+												<i class="fa fa-github"> Code </i>
+											</a>
+										</div>
 									</div>
 								</div>
+								<p class="description">netflix webpage</p>
 							</div>
-							<p class="description">netflix webpage</p>
 						</div>
 					</div>
-				</div>
-			</section>
-		</main>
+				</section>
+			</main>
+		</div>
 	</body>
 </html>
