--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 										</div>
 									</div>
 								</div>
-								<p class="description">netflix webpage</p>
+								<p class="description">Netflix webpage</p>
 							</div>
 						</div>
 						<div class="projects">
@@ -257,7 +257,7 @@
 										</div>
 									</div>
 								</div>
-								<p class="description">netflix webpage</p>
+								<p class="description">Br-Architect webpage</p>
 							</div>
 						</div>
 						<div class="projects">
@@ -275,7 +275,7 @@
 										</div>
 									</div>
 								</div>
-								<p class="description">netflix webpage</p>
+								<p class="description">Flyo webpage</p>
 							</div>
 						</div>
 						<div class="projects">
@@ -295,7 +295,7 @@
 										</div>
 									</div>
 								</div>
-								<p class="description">netflix webpage</p>
+								<p class="description">Loopstudios webpage</p>
 							</div>
 						</div>
 						<div class="projects">
@@ -315,7 +315,7 @@
 										</div>
 									</div>
 								</div>
-								<p class="description">netflix webpage</p>
+								<p class="description">Easybank webpage</p>
 							</div>
 						</div>
 						<div class="projects">
@@ -335,7 +335,7 @@
 										</div>
 									</div>
 								</div>
-								<p class="description">netflix webpage</p>
+								<p class="description">Iphone webpage</p>
 							</div>
 						</div>
 						<div class="projects">
@@ -355,7 +355,7 @@
 										</div>
 									</div>
 								</div>
-								<p class="description">netflix webpage</p>
+								<p class="description">Interior Design webpage</p>
 							</div>
 						</div>
 						<div class="projects">
@@ -373,7 +373,7 @@
 										</div>
 									</div>
 								</div>
-								<p class="description">netflix webpage</p>
+								<p class="description">Catering webpage</p>
 							</div>
 						</div>
 					</div>
