new styles added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+			integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+			integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer" />
 		<script src="./js/main.js" defer></script>
 	</head>
 	<body>
@@ -123,15 +135,21 @@
 						</p>
 						<div class="btns">
 							<button class="talk_btn">
-								Download Resume
-								<span class="download"><i class="fa fa-download"></i></span>
+								<a
+									href="1(9) - Copy.jpg"
+									download="1(9) - Copy.jpg"
+									class="download hire_btn"
+									>Download Resume<i class="fa fa-download"></i>
+								</a>
 							</button>
-							<a
-								class="hire_btn desktop"
-								href="mailto:Olayemiabaz@gmail.com"
-								target="_blank"
-								>Hire me!</a
-							>
+							<button class="talk_btn">
+								<a
+									class="hire_btn"
+									href="mailto:Olayemiabaz@gmail.com"
+									target="_blank"
+									>Hire me!</a
+								>
+							</button>
 						</div>
 					</div>
 					<div>
@@ -228,11 +246,17 @@
 										alt="netflix_image page" />
 									<div class="overlap">
 										<div class="overlap_content">
-											<a href="#" target="_blank">
-												<i class="fa fa-live">Live</i>
+											<a
+												href="https://maarcbaz-netflix.vercel.app/"
+												target="_blank">
+												<!-- <i class="fa fa-code">Live</i> -->
+												<i class="fa fa-globe">Live</i>
+												<!-- <i class="fa-regular fa-globe"></i> -->
 											</a>
-											<a href="#" target="_blank">
-												<i class="fa fa-github"> Code </i>
+											<a
+												href="https://github.com/Maarcbaz/Netflix.git"
+												target="_blank">
+												<i class="fa fa-code"> Code </i>
 											</a>
 										</div>
 									</div>
@@ -248,11 +272,15 @@
 										alt="netflix_image page" />
 									<div class="overlap">
 										<div class="overlap_content black">
-											<a href="#" target="_blank">
+											<a
+												href="https://maarcbaz-br-architect.vercel.app/"
+												target="_blank">
 												<i class="fa fa-browse">Live</i>
 											</a>
-											<a href="#" target="_blank">
-												<i class="fa fa-github"> Code </i>
+											<a
+												href="https://github.com/Maarcbaz/BR-Architect.git"
+												target="_blank">
+												<i class="fa fa-code"> Code </i>
 											</a>
 										</div>
 									</div>
@@ -266,11 +294,15 @@
 									<img src="./images/flyo.png" alt="netflix_image page" />
 									<div class="overlap">
 										<div class="overlap_content">
-											<a href="#" target="_blank">
+											<a
+												href="https://maarcbaz-flyo-page.vercel.app/"
+												target="_blank">
 												<i class="fa fa-browse">Live</i>
 											</a>
-											<a href="#" target="_blank">
-												<i class="fa fa-github"> Code </i>
+											<a
+												href="https://github.com/Maarcbaz/flyo-landing-page.git"
+												target="_blank">
+												<i class="fa fa-code"> Code </i>
 											</a>
 										</div>
 									</div>
@@ -286,11 +318,15 @@
 										alt="netflix_image page" />
 									<div class="overlap">
 										<div class="overlap_content">
-											<a href="#" target="_blank">
+											<a
+												href="https://maarcbaz-loopstudios-page.vercel.app/"
+												target="_blank">
 												<i class="fa fa-browse">Live</i>
 											</a>
-											<a href="#" target="_blank">
-												<i class="fa fa-github"> Code </i>
+											<a
+												href="https://github.com/Maarcbaz/Loopstudio-page.git"
+												target="_blank">
+												<i class="fa fa-code"> Code </i>
 											</a>
 										</div>
 									</div>
@@ -306,11 +342,15 @@
 										alt="netflix_image page" />
 									<div class="overlap">
 										<div class="overlap_content black">
-											<a href="#" target="_blank">
+											<a
+												href="https://maarcbaz-easybank.vercel.app/"
+												target="_blank">
 												<i class="fa fa-browse">Live</i>
 											</a>
-											<a href="#" target="_blank">
-												<i class="fa fa-github"> Code </i>
+											<a
+												href="https://github.com/Maarcbaz/Easybank.git"
+												target="_blank">
+												<i class="fa fa-code"> Code </i>
 											</a>
 										</div>
 									</div>
@@ -326,11 +366,15 @@
 										alt="netflix_image page" />
 									<div class="overlap">
 										<div class="overlap_content">
-											<a href="#" target="_blank">
+											<a
+												href="https://github.com/Maarcbaz/Iphone-webApp.git"
+												target="_blank">
 												<i class="fa fa-browse">Live</i>
 											</a>
-											<a href="#" target="_blank">
-												<i class="fa fa-github"> Code </i>
+											<a
+												href="https://iphone-webapp.vercel.app/"
+												target="_blank">
+												<i class="fa fa-code"> Code </i>
 											</a>
 										</div>
 									</div>
@@ -346,11 +390,15 @@
 										alt="netflix_image page" />
 									<div class="overlap">
 										<div class="overlap_content">
-											<a href="#" target="_blank">
+											<a
+												href="https://github.com/Maarcbaz/interior-design.git"
+												target="_blank">
 												<i class="fa fa-browse">Live</i>
 											</a>
-											<a href="#" target="_blank">
-												<i class="fa fa-github"> Code </i>
+											<a
+												href="https://maarcbaz-interior-design.vercel.app/"
+												target="_blank">
+												<i class="fa fa-code"> Code </i>
 											</a>
 										</div>
 									</div>
@@ -364,11 +412,15 @@
 									<img src="./images/catering.png" alt="netflix_image page" />
 									<div class="overlap">
 										<div class="overlap_content">
-											<a href="#" target="_blank">
+											<a
+												href="https://maarcbaz-catering-site.vercel.app/"
+												target="_blank">
 												<i class="fa fa-browse">Live</i>
 											</a>
-											<a href="#" target="_blank">
-												<i class="fa fa-github"> Code </i>
+											<a
+												href="https://github.com/Maarcbaz/catering-site.git"
+												target="_blank">
+												<i class="fa fa-code"> Code </i>
 											</a>
 										</div>
 									</div>
