--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 										</div>
 									</div>
 								</div>
-								<p class="description">Br-Architect webpage</p>
+								<p class="description">Landing page for a construction site</p>
 							</div>
 						</div>
 						<div class="projects">
@@ -307,7 +307,7 @@
 										</div>
 									</div>
 								</div>
-								<p class="description">Flyo webpage</p>
+								<p class="description">Flyo landing Webpage</p>
 							</div>
 						</div>
 						<div class="projects">
@@ -331,7 +331,7 @@
 										</div>
 									</div>
 								</div>
-								<p class="description">Loopstudios webpage</p>
+								<p class="description">Loopstudios Webpage</p>
 							</div>
 						</div>
 						<div class="projects">
@@ -355,7 +355,7 @@
 										</div>
 									</div>
 								</div>
-								<p class="description">Easybank webpage</p>
+								<p class="description">Easybank landing Webpage</p>
 							</div>
 						</div>
 						<div class="projects">
@@ -367,19 +367,19 @@
 									<div class="overlap">
 										<div class="overlap_content">
 											<a
-												href="https://github.com/Maarcbaz/Iphone-webApp.git"
+												href="https://iphone-webapp.vercel.app/"
 												target="_blank">
 												<i class="fa fa-browse">Live</i>
 											</a>
 											<a
-												href="https://iphone-webapp.vercel.app/"
+												href="https://github.com/Maarcbaz/Iphone-webApp.git"
 												target="_blank">
 												<i class="fa fa-code"> Code </i>
 											</a>
 										</div>
 									</div>
 								</div>
-								<p class="description">Iphone webpage</p>
+								<p class="description">Iphone Webpage</p>
 							</div>
 						</div>
 						<div class="projects">
@@ -391,19 +391,19 @@
 									<div class="overlap">
 										<div class="overlap_content">
 											<a
-												href="https://github.com/Maarcbaz/interior-design.git"
+												href="https://maarcbaz-interior-design.vercel.app/"
 												target="_blank">
 												<i class="fa fa-browse">Live</i>
 											</a>
 											<a
-												href="https://maarcbaz-interior-design.vercel.app/"
+												href="https://github.com/Maarcbaz/interior-design.git"
 												target="_blank">
 												<i class="fa fa-code"> Code </i>
 											</a>
 										</div>
 									</div>
 								</div>
-								<p class="description">Interior Design webpage</p>
+								<p class="description">Landing page for Interior Design</p>
 							</div>
 						</div>
 						<div class="projects">
@@ -425,7 +425,7 @@
 										</div>
 									</div>
 								</div>
-								<p class="description">Catering webpage</p>
+								<p class="description">Catering Webpage</p>
 							</div>
 						</div>
 					</div>
