--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Abass Muhammed portfolio" />
 		<title>Maarcbaz</title>
 		<!-- LINKS / CDN / CSS / FAVICON  -->
+		<script
+			src="https://kit.fontawesome.com/1a2d1b260e.js"
+			crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="./styles.css" />
 		<link rel="shortcut icon" href="./images/logo.png" type="image/x-icon" />
 		<link
@@ -25,6 +29,10 @@
 			integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer" />
+		<script
+			type="text/javascript"
+			src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
 		<script src="./js/main.js" defer></script>
 	</head>
 	<body>
@@ -249,9 +257,7 @@
 											<a
 												href="https://maarcbaz-netflix.vercel.app/"
 												target="_blank">
-												<!-- <i class="fa fa-code">Live</i> -->
-												<i class="fa fa-globe">Live</i>
-												<!-- <i class="fa-regular fa-globe"></i> -->
+												<i class="fa fa-globe"> Live</i>
 											</a>
 											<a
 												href="https://github.com/Maarcbaz/Netflix.git"
@@ -275,7 +281,7 @@
 											<a
 												href="https://maarcbaz-br-architect.vercel.app/"
 												target="_blank">
-												<i class="fa fa-browse">Live</i>
+												<i class="fa fa-globe"> Live</i>
 											</a>
 											<a
 												href="https://github.com/Maarcbaz/BR-Architect.git"
@@ -297,7 +303,7 @@
 											<a
 												href="https://maarcbaz-flyo-page.vercel.app/"
 												target="_blank">
-												<i class="fa fa-browse">Live</i>
+												<i class="fa fa-globe"> Live</i>
 											</a>
 											<a
 												href="https://github.com/Maarcbaz/flyo-landing-page.git"
@@ -321,7 +327,7 @@
 											<a
 												href="https://maarcbaz-loopstudios-page.vercel.app/"
 												target="_blank">
-												<i class="fa fa-browse">Live</i>
+												<i class="fa fa-globe"> Live</i>
 											</a>
 											<a
 												href="https://github.com/Maarcbaz/Loopstudio-page.git"
@@ -345,7 +351,7 @@
 											<a
 												href="https://maarcbaz-easybank.vercel.app/"
 												target="_blank">
-												<i class="fa fa-browse">Live</i>
+												<i class="fa fa-globe"> Live</i>
 											</a>
 											<a
 												href="https://github.com/Maarcbaz/Easybank.git"
@@ -369,7 +375,7 @@
 											<a
 												href="https://iphone-webapp.vercel.app/"
 												target="_blank">
-												<i class="fa fa-browse">Live</i>
+												<i class="fa fa-globe"> Live</i>
 											</a>
 											<a
 												href="https://github.com/Maarcbaz/Iphone-webApp.git"
@@ -393,7 +399,7 @@
 											<a
 												href="https://maarcbaz-interior-design.vercel.app/"
 												target="_blank">
-												<i class="fa fa-browse">Live</i>
+												<i class="fa fa-globe"> Live</i>
 											</a>
 											<a
 												href="https://github.com/Maarcbaz/interior-design.git"
@@ -415,7 +421,7 @@
 											<a
 												href="https://maarcbaz-catering-site.vercel.app/"
 												target="_blank">
-												<i class="fa fa-browse">Live</i>
+												<i class="fa fa-globe"> Live</i>
 											</a>
 											<a
 												href="https://github.com/Maarcbaz/catering-site.git"
