--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 						<img src="./images/abass.jpg" title="Abass" alt="Abass image" />
 					</div>
 				</article>
-				<section class="section_technologies" id="Technologies">
+				<section class="section_technologies" id="technologies">
 					<h1>technologies</h1>
 					<div class="technologies">
 						<div class="technology">
