--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 						<div class="btns">
 							<button class="talk_btn">
 								<a
-									href="1(9) - Copy.jpg"
-									download="1(9) - Copy.jpg"
+									href="./Abass_muhammed.pdf"
+									download="./Abass_muhammed.pdf"
 									class="download hire_btn"
 									>Download Resume<i class="fa fa-download"></i>
 								</a>
