--- a/index.html
+++ b/index.html
@@ -450,10 +450,12 @@
 				<div class="popup" id="popup_msg">
 					<div class="overlay_pop"></div>
 					<div class="pop_content">
-						<h4>Send Email instaed</h4>
+						<h4>Send Email instead</h4>
 						<div class="popmenu_btn">
 							<button class="btnCancel" onclick="popNav()">Cancel</button>
-							<button class="bntEmail_pop">Send Mail</button>
+							<button class="bntEmail_pop">
+								<a href="mailto:Olayemiabaz@gmail.com">Send Mail </a>
+							</button>
 						</div>
 					</div>
 				</div>
@@ -497,7 +499,7 @@
 								</li>
 								<li>
 									<a
-										href="https://wa.me/message/ZZIQ6AVH74DBA1"
+										href="https://www.instagram.com/stre_etcoder/"
 										target="_blank">
 										<i class="fa fa-instagram"></i>
 									</a>
